<resources>
    <string name="app_name">my_netsoul</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="preferences_category_network">Préférences réseaux</string>
    <string name="preferences_category_credentials">Informations de connexion</string>
    <string name="preferences_network_ip">Adresse IP</string>
    <string name="preferences_network_port">Port</string>
    <string name="preferences_credentials_login">Login</string>
    <string name="preferences_credentials_passwd">Mot de passe PPP</string>
    <string name="title_activity_settings">Préférences</string>
    <string name="local_service_started">Service réseau lancé</string>
    <string name="local_service_stopped">Service réseau stoppé</string>
    <string name="local_service_label">Service réseau</string>
    <string name="dialog_add_contact">Ajouter un contact</string>
    <string name="dialog_add">Ajouter</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="dialog_confirmer">OK</string>
    <string name="dialog_delete_contact">Voulez-vous réellement supprimer ce contact ?</string>
    <string name="service_connected">Service connecté</string>
    <string name="service_disconnected">Service déconnecté</string>
    <string name="menu_state">Connexion</string>
    <string name="send">Envoyer</string>
    <string name="user_photo">Photo</string>
</resources>